--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
 <head>
     <title>Blackjack Game</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        #game-area { margin-top: 20px; }
-        .card { display: inline-block; margin: 5px; padding: 10px; border: 1px solid black; }
-        button { margin: 10px; padding: 10px; }
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            background-color: #2c3e50;
+            color: white;
+        }
+        #game-area { 
+            margin-top: 20px; 
+            padding: 20px;
+            background: #34495e;
+            display: inline-block;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        }
+        .card { 
+            display: inline-block; 
+            margin: 5px; 
+            padding: 15px; 
+            border: 1px solid white;
+            background: #ecf0f1;
+            color: black;
+            border-radius: 5px;
+        }
+        button { 
+            margin: 10px; 
+            padding: 12px; 
+            background-color: #e74c3c; 
+            color: white; 
+            border: none; 
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        button:hover { 
+            background-color: #c0392b; 
+        }
+        #trivia-area {
+            margin-top: 20px;
+            padding: 20px;
+            background: #16a085;
+            border-radius: 10px;
+            display: inline-block;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+        }
     </style>
 </head>
 <body>
