--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             cursor: pointer;
             font-size: 16px;
             border-radius: 5px;
-            display: none;
         }
         button:hover { 
             background-color: #c0392b; 
@@ -59,7 +58,7 @@
         <p><strong>Dealer's Bankroll:</strong> $<span id="dealer-bankroll">100</span></p>
         <p><strong>Your Bet:</strong> $<span id="current-bet">0</span></p>
         <input type="number" id="bet-amount" min="1" max="10000" value="10">
-        <button onclick="startRound()" style="display: inline-block;">Start Round</button>
+        <button onclick="startRound()">Start Round</button>
         <button id="hit-btn" onclick="hit()" disabled>Hit</button>
         <button id="stand-btn" onclick="stand()" disabled>Stand</button>
         <button id="double-btn" onclick="doubleDown()" disabled>Double Down</button>
@@ -80,15 +79,6 @@
         let dealerHand = [];
         let currentBet = 0;
         
-        const triviaQuestions = [
-            { question: "What is the capital of Canada?", options: ["Toronto", "Vancouver", "Ottawa", "Montreal"], answer: 2 },
-            { question: "Which planet is known as the Red Planet?", options: ["Earth", "Venus", "Mars", "Jupiter"], answer: 2 },
-            { question: "How many continents are there on Earth?", options: ["5", "6", "7", "8"], answer: 2 },
-            { question: "What is the chemical symbol for gold?", options: ["Au", "Ag", "Pb", "Fe"], answer: 0 },
-            { question: "Who wrote 'To Kill a Mockingbird'?", options: ["Harper Lee", "Mark Twain", "J.K. Rowling", "Ernest Hemingway"], answer: 0 },
-            { question: "What is the square root of 64?", options: ["6", "7", "8", "9"], answer: 2 }
-        ];
-        
         function drawCard() {
             const values = ["2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"];
             return values[Math.floor(Math.random() * values.length)];
@@ -98,6 +88,7 @@
             let betInput = document.getElementById("bet-amount").value;
             currentBet = Math.min(Math.max(parseInt(betInput), 1), bankroll);
             bankroll -= currentBet;
+            document.getElementById("bankroll").innerText = bankroll;
             playerHand = [drawCard(), drawCard()];
             dealerHand = [drawCard(), drawCard()];
             updateDisplay();
@@ -107,35 +98,9 @@
             document.getElementById("split-btn").disabled = false;
         }
 
-        function startTrivia() {
-            if (bankroll > 0) return;
-            document.getElementById("trivia-area").style.display = "block";
-            let qIndex = Math.floor(Math.random() * triviaQuestions.length);
-            let question = triviaQuestions[qIndex];
-            document.getElementById("trivia-question").innerText = question.question;
-            for (let i = 0; i < 4; i++) {
-                document.getElementById(`option-${i}`).innerText = question.options[i];
-                document.getElementById(`option-${i}`).setAttribute("data-answer", i == question.answer);
-            }
-        }
-
-        function answerTrivia(option) {
-            let isCorrect = document.getElementById(`option-${option}`).getAttribute("data-answer") === "true";
-            if (isCorrect) {
-                triviaProgress++;
-                if (triviaProgress >= 3) {
-                    bankroll += 10;
-                    triviaProgress = 0;
-                    document.getElementById("bankroll").innerText = bankroll;
-                    alert("You earned $10!");
-                    document.getElementById("trivia-area").style.display = "none";
-                } else {
-                    alert("Correct! Keep going.");
-                }
-            } else {
-                triviaProgress = Math.max(0, triviaProgress - 1);
-                alert("Wrong! You lost some progress.");
-            }
+        function updateDisplay() {
+            document.getElementById("player-hand").innerText = playerHand.join(", ");
+            document.getElementById("dealer-hand").innerText = dealerHand.join(", ");
         }
     </script>
 </body>
