--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             max-width: 800px;
             margin: 0 auto;
             box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            display: none; /* Hidden until first round starts */
         }
         .hand-container {
             margin: 15px 0;
@@ -81,10 +82,56 @@
             margin: 20px auto;
             max-width: 600px;
             box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            text-align: center;
         }
         .money {
             color: #ffd700;
             font-weight: bold;
+        }
+        #pregame-trivia {
+            background: rgba(44, 62, 80, 0.9);
+            padding: 20px;
+            border-radius: 15px;
+            margin: 20px auto;
+            max-width: 600px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
+            text-align: center;
+            display: block; /* Initially visible */
+        }
+        #pregame-trivia h2 {
+            margin-top: 0;
+        }
+        /* Modal Styles */
+        #message-modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        #message-modal-content {
+            background: #2c3e50;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 400px;
+            text-align: center;
+            box-shadow: 0 0 20px rgba(255, 107, 107, 0.5);
+        }
+        #message-modal-content p {
+            margin: 0 0 20px 0;
+            font-size: 1.2em;
+        }
+        #message-modal-content button {
+            background: linear-gradient(45deg, #3498db, #2980b9);
+        }
+        #message-modal-content button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(52, 152, 219, 0.5);
         }
     </style>
 </head>
@@ -113,6 +160,21 @@
         <button id="option-2" onclick="answerTrivia(2)"></button>
         <button id="option-3" onclick="answerTrivia(3)"></button>
     </div>
+    <div id="pregame-trivia">
+        <h2>Pre-Game Trivia Bonus</h2>
+        <p>Answer trivia questions to increase your starting bankroll! (Up to 3 questions or until wrong)</p>
+        <p id="pregame-trivia-question"></p>
+        <button id="pregame-option-0" onclick="answerPreGameTrivia(0)"></button>
+        <button id="pregame-option-1" onclick="answerPreGameTrivia(1)"></button>
+        <button id="pregame-option-2" onclick="answerPreGameTrivia(2)"></button>
+        <button id="pregame-option-3" onclick="answerPreGameTrivia(3)"></button>
+    </div>
+    <div id="message-modal">
+        <div id="message-modal-content">
+            <p id="message-text"></p>
+            <button onclick="closeMessage()">OK</button>
+        </div>
+    </div>
 
     <script>
         let bankroll = 100;
@@ -127,6 +189,8 @@
         let currentTrivia = null;
         let canDouble = false;
         let canSplit = false;
+        let firstRoundStarted = false;
+        let preGameTriviaAttempts = 0;
 
         const suits = ['♥', '♦', '♠', '♣'];
         const triviaQuestions = [
@@ -134,6 +198,15 @@
             {question: "Who wrote 'To Kill a Mockingbird'?", options: ["Harper Lee", "Mark Twain", "J.K. Rowling", "Ernest Hemingway"], answer: 0},
             {question: "What is the largest planet in our solar system?", options: ["Mars", "Jupiter", "Saturn", "Earth"], answer: 1}
         ];
+
+        function showMessage(message) {
+            document.getElementById("message-text").innerText = message;
+            document.getElementById("message-modal").style.display = "flex";
+        }
+
+        function closeMessage() {
+            document.getElementById("message-modal").style.display = "none";
+        }
 
         function drawCard() {
             const values = ["2", "3", "4", "5", "6", "7", "8", "9", "10", "J", "Q", "K", "A"];
@@ -182,11 +255,40 @@
             }
         }
 
+        function showPreGameTrivia() {
+            if (preGameTriviaAttempts < 3 && !firstRoundStarted) {
+                const trivia = triviaQuestions[Math.floor(Math.random() * triviaQuestions.length)];
+                document.getElementById("pregame-trivia-question").innerText = trivia.question;
+                for (let i = 0; i < 4; i++) {
+                    document.getElementById(`pregame-option-${i}`).innerText = trivia.options[i];
+                }
+                document.getElementById("pregame-trivia").style.display = "block";
+            } else if (!firstRoundStarted) {
+                document.getElementById("pregame-trivia").style.display = "none";
+                document.getElementById("game-area").style.display = "block";
+                showMessage("Pre-game trivia complete! Start your first round.");
+            }
+        }
+
+        function answerPreGameTrivia(choice) {
+            const trivia = triviaQuestions.find(t => t.question === document.getElementById("pregame-trivia-question").innerText);
+            if (choice === trivia.answer) {
+                bankroll += 20;
+                preGameTriviaAttempts++;
+                showMessage(`Correct! Your bankroll is now $${bankroll}. Answer another?`);
+                showPreGameTrivia();
+            } else {
+                showMessage("Wrong answer! Pre-game trivia ends. Start your game!");
+                document.getElementById("pregame-trivia").style.display = "none";
+                document.getElementById("game-area").style.display = "block";
+            }
+        }
+
         function startRound() {
-            if (gameInProgress) return;
+            if (gameInProgress || firstRoundStarted) return;
             let betInput = parseInt(document.getElementById("bet-amount").value);
             if (isNaN(betInput) || betInput < 1 || betInput > bankroll) {
-                alert("Please enter a valid bet amount!");
+                showMessage("Please enter a valid bet amount!");
                 return;
             }
             currentBet = betInput;
@@ -194,6 +296,7 @@
             playerHand = [drawCard(), drawCard()];
             dealerHand = [drawCard(), drawCard()];
             gameInProgress = true;
+            firstRoundStarted = true; // Mark first round as started
             isSplit = false;
             splitHand = [];
             
@@ -317,7 +420,7 @@
 
             updateDisplay();
             toggleButtons(false);
-            alert(message);
+            showMessage(message);
 
             currentBet = 0;
             splitBet = 0;
@@ -331,7 +434,7 @@
             updateDisplay();
 
             if (bankroll <= 0) {
-                alert("You're out of money! Answer a trivia question to get back in the game!");
+                showMessage("You're out of money! Answer a trivia question to get back in the game!");
                 showTrivia();
             }
         }
@@ -352,23 +455,26 @@
                 document.getElementById(`option-${i}`).innerText = currentTrivia.options[i];
             }
             triviaArea.style.display = "block";
-            document.getElementById("start-round-btn").disabled = true; // Disable Deal button during trivia
+            document.getElementById("start-round-btn").disabled = true;
         }
 
         function answerTrivia(choice) {
             const triviaArea = document.getElementById("trivia-area");
             if (choice === currentTrivia.answer) {
                 bankroll += 20;
-                alert("Correct! You've won $20 to continue playing!");
+                showMessage("Correct! You've won $20 to continue playing!");
             } else {
-                alert("Wrong answer! Game Over! Starting fresh with $100.");
                 bankroll = 100;
                 dealerBankroll = 100;
+                showMessage("Wrong answer! Game Over! Starting fresh with $100.");
             }
             triviaArea.style.display = "none";
-            document.getElementById("start-round-btn").disabled = false; // Re-enable Deal button
+            document.getElementById("start-round-btn").disabled = false;
             updateDisplay();
         }
+
+        // Initialize pre-game trivia
+        window.onload = showPreGameTrivia;
 
         updateDisplay();
     </script>
